--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,22 @@
                 </div>
                 <div class="music__text text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt dolores modi, magni aut temporibus ducimus corporis? Maiores illo laboriosam corporis suscipit, ex iusto mollitia accusantium ea dignissimos doloremque dicta ratione nesciunt quibusdam odit, obcaecati aliquam quae!</div>
              </section>
+             <footer class="footer">
+                <div class="footer__media">
+                    <div class="media__items media__items__1"><a href="https://www.facebook.com/AdInfinitumMusic" class="links"></a>
+                    </div>
+                    <div class="media__items media__items__2"><a href="https://www.instagram.com/adinfinitumofficial/" class="links"></a>
+                    </div>
+                    <div class="media__items media__items__3"><a href="https://www.youtube.com/channel/UCxnfBj0vc6nihpd5CWh5h0g" class="links"></a></div>
+                    <div class="media__items media__items__4"><a href="https://twitter.com/adinfinitumband" class="links"></a></div>
+                </div>
+                
+                <div class="footer__copy text">Copyright © 2022 Ad Infinitum | Audioman Pro By Catch Themes
+                </div>
+
+                <div class="footer__official subtitle"><a href="https://adinfinitumofficial.com/" class="website">AD Infinitum</a>
+                </div>
+             </footer>
         </div>
     </div>
 </body>
