--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,54 @@
                     <div class="video__text text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus explicabo commodi quaerat suscipit incidunt. Sit!</div>
                 </div>
              </section>
+             <section class="concerts">
+                <div class="container">
+                    <div class="concerts__title title">Concerts</div>
+                    <table class="concerts__table">
+                        <thead class="table__header">
+                            <tr>
+                                <th class="subtitle">Where will it be</th>
+                                <th class="subtitle">When will it be</th>
+                            </tr>
+                        </thead>
+                        <tbody class="table__body">
+                           <tr>
+                                <td class="table__text text">Lorem ipsum dolor, sit amet consectetur adipisicing.</td>
+                                <td class="table__text text">mm/dd/yyyy time</td>
+                            </tr>
+                                <td class="table__text text">Lorem ipsum dolor, sit amet consectetur adipisicing.</td>
+                                <td class="table__text text">mm/dd/yyyy time</td>
+                            </tr>
+
+                            <td class="table__text text">Lorem ipsum dolor, sit amet consectetur adipisicing.</td>
+                                <td class="table__text text">mm/dd/yyyy time</td>
+                            </tr>
+                            <td class="table__text text">Lorem ipsum dolor, sit amet consectetur adipisicing.</td>
+                            <td class="table__text text">mm/dd/yyyy time</td>
+                            </tr>
+                            <td class="table__text text">Lorem ipsum dolor, sit amet consectetur adipisicing.</td>
+                            <td class="table__text text">mm/dd/yyyy time</td>
+                            </tr>
+
+                            <td class="table__text text">Lorem ipsum dolor, sit amet consectetur adipisicing.</td>
+                            <td class="table__text text">mm/dd/yyyy time</td>
+                            </tr>
+                            <td class="table__text text">Lorem ipsum dolor, sit amet consectetur adipisicing.</td>
+                            <td class="table__text text">mm/dd/yyyy time</td>
+                            </tr>
+                            <td class="table__text text">Lorem ipsum dolor, sit amet consectetur adipisicing.</td>
+                            <td class="table__text text">mm/dd/yyyy time</td>
+                            </tr>
+
+                         <td class="table__text text">Lorem ipsum dolor, sit amet consectetur adipisicing.</td>
+                          <td class="table__text text">mm/dd/yyyy time</td>
+                         </tr>
+                        </tbody>
+
+                        
+                    </table>
+                </div>
+             </section>
              <footer class="footer">
                 <div class="container">
                     <div class="footer__media">
