--- a/src/index.html
+++ b/src/index.html
@@ -64,11 +64,16 @@
                 <div class="container">
                     <div class="video__title title">Video</div>
                     <div class="video__content">
-                        <iframe width="560" height="315"  src="https://www.youtube.com/embed/1zch8qWngIY?start=217" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/noGeEmrhKew" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/a4N-q1UegJk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/MLOAgZCZPfo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <iframe width="560" height="315"  src="https://www.youtube.com/embed/ri84CE6QYE8?start=11" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="content__link"><iframe width="560" height="315"  src="https://www.youtube.com/embed/1zch8qWngIY?" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                        <div class="content__link"><iframe width="560" height="315" src="https://www.youtube.com/embed/noGeEmrhKew" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                        <div class="content__link"><iframe width="560" height="315" src="https://www.youtube.com/embed/a4N-q1UegJk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                        <div class="content__link"><iframe width="560" height="315" src="https://www.youtube.com/embed/MLOAgZCZPfo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                        <div class="content__link"><iframe width="560" height="315"  src="https://www.youtube.com/embed/ri84CE6QYE8?" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
                     </div>
                     <div class="video__text text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus explicabo commodi quaerat suscipit incidunt. Sit!</div>
                 </div>
@@ -116,10 +121,13 @@
                           <td class="table__text text">mm/dd/yyyy time</td>
                          </tr>
                         </tbody>
-
-                        
                     </table>
                 </div>
+             </section>
+
+             <section class="merchandise">
+                <div class="merchandise__title title">Merchandise</div>
+                    <p class="merchandise__text text">Information about merchandise will be able aas soon as possible.</p>
              </section>
              <footer class="footer">
                 <div class="container">
