--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                          <div class="item__menu">Merchandise</div>
                      </div> 
                 </div>
-             </header>
+            </header>
      
              <section class="album">
                  <div class="container">
@@ -152,6 +152,7 @@
              </footer>
         </div>
     </div>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
