--- a/src/index.html
+++ b/src/index.html
@@ -142,7 +142,7 @@
                                 <a href="https://twitter.com/adinfinitumband" class="media__items media__items__4"><img src="../src/img/icon_4.png" alt=""></a>
                             </div>
                             <a href="https://adinfinitumofficial.com/" class="footer__official subtitle">AD Infinitum</a>
-                            <div class="footer__copy text">Copyright © 2022 Ad Infinitum | Audioman Pro By Catch Themes
+                            <div class="footer__copy text">Copyright © 2022 Ad Infinitum | Alex_Pu5hkar
                             </div>
             
                            
